Add initial UI for testing embedded server

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">FlyWeb</string>
+    <string name="title_activity_share">Share Files</string>
 </resources>
